--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/google.png
+   - assets/images/apple-logo.png
+   - assets/images/facebook.png
+   - assets/images/profil.jpg
+   - assets/images/logo.jfif
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -72,6 +75,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
