--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.15
   velocity_x: ^3.6.0
   google_sign_in: ^5.4.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
